--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "@radix-ui/react-tooltip": "^1.0.7",
     "axios": "^1.6.8",
     "chart.js": "^4.4.2",
+    "date-fns": "^3.6.0",
+    "date-fns-tz": "^3.1.3",
     "lucide-react": "^0.368.0",
     "next": "14.2.1",
     "nookies": "^2.5.2",
