--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "axios": "^1.6.8",
     "chart.js": "^4.4.2",
     "chartjs-plugin-datalabels": "^2.2.0",
+    "cropperjs": "^1.6.2",
     "date-fns": "^3.6.0",
     "date-fns-tz": "^3.1.3",
     "lucide-react": "^0.368.0",
@@ -21,7 +22,9 @@
     "nookies": "^2.5.2",
     "nprogress": "^0.2.0",
     "react": "^18",
+    "react-avatar-edit": "^1.2.0",
     "react-chartjs-2": "^5.2.0",
+    "react-cropper": "^2.3.3",
     "react-dom": "^18",
     "react-hook-form": "^7.51.3",
     "react-loader-spinner": "^6.1.6",
