--- a/.gitignore
+++ b/.gitignore
@@ -36,3 +36,10 @@ yarn-error.log*
 next-env.d.ts
 
 .vercel
+
+# pwa folders
+**/public/sw.js.
+**/public/sw.js.map
+**/public/vercel.svg
+**/public/workbox***.js
+**/public/workbox***.js.map
