--- a/package.json
+++ b/package.json
@@ -17,8 +17,10 @@
     "cropperjs": "^1.6.2",
     "date-fns": "^3.6.0",
     "date-fns-tz": "^3.1.3",
+    "eslint-plugin-react": "^7.34.3",
     "lucide-react": "^0.368.0",
     "next": "14.2.1",
+    "next-pwa": "^5.6.0",
     "nookies": "^2.5.2",
     "nprogress": "^0.2.0",
     "react": "^18",
@@ -28,6 +30,7 @@
     "react-dom": "^18",
     "react-hook-form": "^7.51.3",
     "react-loader-spinner": "^6.1.6",
+    "sharp": "^0.33.4",
     "sonner": "^1.4.41",
     "zod": "^3.23.4"
   },
@@ -39,8 +42,8 @@
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "@types/react-toastify": "^4.1.0",
-    "eslint": "^8",
-    "eslint-config-next": "14.2.1",
+    "eslint": "^8.57.0",
+    "eslint-config-next": "^14.2.1",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
