--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "date-fns": "^3.6.0",
     "date-fns-tz": "^3.1.3",
     "eslint-plugin-react": "^7.34.3",
+    "eslint-plugin-react-hooks": "^5.1.0-rc-f38c22b244-20240704",
     "lucide-react": "^0.368.0",
     "next": "14.2.1",
     "next-pwa": "^5.6.0",
