--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@next/third-parties": "^14.2.5",
     "@radix-ui/react-tooltip": "^1.0.7",
     "axios": "^1.6.8",
+    "browser-image-compression": "^2.0.2",
     "chart.js": "^4.4.2",
     "chartjs-plugin-datalabels": "^2.2.0",
     "cropperjs": "^1.6.2",
@@ -32,6 +33,8 @@
     "react-dom": "^18",
     "react-hook-form": "^7.51.3",
     "react-loader-spinner": "^6.1.6",
+    "react-quill": "^2.0.0",
+    "react-select": "^5.8.0",
     "sharp": "^0.33.4",
     "sonner": "^1.4.41",
     "zod": "^3.23.4"
