--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "@hookform/resolvers": "^3.3.4",
     "@next/third-parties": "^14.2.5",
     "@radix-ui/react-tooltip": "^1.0.7",
-    "axios": "^1.6.8",
+    "axios": "^1.3.1",
     "browser-image-compression": "^2.0.2",
     "chart.js": "^4.4.2",
     "chartjs-plugin-datalabels": "^2.2.0",
@@ -32,6 +32,7 @@
     "react-cropper": "^2.3.3",
     "react-dom": "^18",
     "react-hook-form": "^7.51.3",
+    "react-joyride": "^2.8.2",
     "react-loader-spinner": "^6.1.6",
     "react-quill": "^2.0.0",
     "react-select": "^5.8.0",
